--- a/js/listaTarefas/index.html
+++ b/js/listaTarefas/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
     <link rel="shortcut icon" href="assets/Grafikartes-Flat-Retro-Modern-Notes.ico" type="image/x-icon">
     <script src="main.js" defer></script>
 </head>
